# ShitHub-Daemon

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  makefile
examples/: exampleconfig.template  template.dtd
src/: server.cpp  server.hpp  tcp_connection.cpp  tcp_connection.hpp
src/Config/: ConfigManager.cpp  ConfigManager.hpp  ConfigStore.cpp  ConfigStore.hpp  config_manager.cpp  config_manager.hpp  configstore.hpp
src/Log/: FileHandler.cpp  FileHandler.hpp  Handler.hpp  Levels.hpp  Log.cpp  Log.hpp
src/Server/: ipc_connection.cpp  ipc_connection.hpp  server.cpp  server.hpp
src/Utils/: Filepaths.cpp  Filepaths.hpp  Split.cpp  Split.hpp  Timestamp.cpp  Timestamp.hpp
